# p3fc

./: README.md  pyproject.toml
p3fc/: __init__.py  run_p3fc.py
p3fc/lib/: classes.py  gui.py  gui.ui  utility.py
